fix: 修复过时的API使用