@@ -45,7 +45,7 @@ public class cb_AttrCompare183 implements ObjectPayload<Object> {
         ctBeanComparator.addField(CtField.make("private static final long serialVersionUID = -3490850999041592962L;", ctBeanComparator));
         final Comparator beanComparator = (Comparator) ctBeanComparator.toClass(
                 new SuClassLoader(),SuClassLoader.class.getProtectionDomain()
-        ).newInstance();
+        ).getDeclaredConstructor().newInstance();
         ctBeanComparator.defrost();
         return beanComparator;
     }
